--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/holepunchto/bare-cov/issues"
   },
-  "homepage": "https://github.com/holepunchto/bare-cov#readme"
+  "homepage": "https://github.com/holepunchto/bare-cov#readme",
+  "dependencies": {
+    "@bcoe/v8-coverage": "^0.2.3",
+    "@istanbuljs/schema": "^0.1.3",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-reports": "^3.1.7",
+    "test-exclude": "^7.0.1",
+    "v8-to-istanbul": "^9.3.0"
+  }
 }
