--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "istanbul-lib-coverage": "^3.2.2",
     "istanbul-lib-report": "^3.0.1",
     "istanbul-reports": "^3.1.7",
+    "paparam": "^1.3.3",
     "test-exclude": "^7.0.1",
     "v8-to-istanbul": "^9.3.0"
   },
