--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   "homepage": "https://github.com/holepunchto/bare-cov#readme",
   "dependencies": {
     "@istanbuljs/schema": "^0.1.3",
-    "glob": "^11.0.0",
     "istanbul-lib-coverage": "^3.2.2",
     "istanbul-lib-report": "^3.0.1",
     "istanbul-reports": "^3.1.7",
-    "minimatch": "^10.0.1",
+    "test-exclude": "^7.0.1",
     "v8-to-istanbul": "^9.3.0"
   },
   "devDependencies": {
