--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "istanbul-lib-coverage": "^3.2.2",
     "istanbul-lib-report": "^3.0.1",
     "istanbul-reports": "^3.1.7",
-    "test-exclude": "^7.0.1",
+    "minimatch": "^10.0.1",
     "v8-to-istanbul": "^9.3.0"
   },
   "devDependencies": {
