--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@istanbuljs/schema": "^0.1.3",
     "picomatch": "^4.0.2",
-    "v8-to-istanbul": "github:holepunchto/bare-v8-to-istanbul"
+    "v8-to-istanbul": "^9.3.0"
   },
   "devDependencies": {
     "standard": "^17.1.0"
