--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
   "homepage": "https://github.com/holepunchto/bare-cov#readme",
   "dependencies": {
     "@istanbuljs/schema": "^0.1.3",
+    "bare-fs": "^4.1.2",
+    "bare-inspector": "^4.0.1",
+    "bare-path": "^3.0.0",
+    "bare-url": "^2.1.5",
     "picomatch": "^4.0.2",
-    "v8-to-istanbul": "^9.3.0"
+    "v8-to-istanbul": "^9.3.0",
+    "which-runtime": "^1.2.1"
   },
   "devDependencies": {
     "standard": "^17.1.0"
