--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "which-runtime": "^1.2.1"
   },
   "devDependencies": {
+    "bare-subprocess": "^4.0.5",
+    "brittle": "^3.13.1",
     "standard": "^17.1.0"
   },
   "files": [
