--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "bare-inspector": "^4.0.1",
     "bare-path": "^3.0.0",
     "bare-url": "^2.1.5",
+    "bare-v8-to-istanbul": "github:holepunchto/bare-v8-to-istanbul",
     "picomatch": "^4.0.2",
-    "v8-to-istanbul": "^9.3.0",
     "which-runtime": "^1.2.1"
   },
   "devDependencies": {
