--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test with Node
 
 on:
   push:
@@ -33,6 +33,12 @@ jobs:
 
       - name: Install dependencies
         run: npm i
+
+      - name: Install fixture dependencies
+        run: for dir in test/fixtures/*/; do (cd "$dir" && npm install); done
+
+      - name: Lint
+        run: npm run lint
 
       - name: Run tests
         run: npm test
