--- a/.github/workflows/test-bare.yml
+++ b/.github/workflows/test-bare.yml
@@ -38,6 +38,7 @@ jobs:
         run: npm i
 
       - name: Install fixture dependencies
+        shell: bash
         run: for dir in test/fixtures/*/; do (cd "$dir" && npm install); done
 
       - name: Lint
