--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bare-fs": "^4.1.2",
     "bare-inspector": "^4.0.1",
     "bare-path": "^3.0.0",
+    "bare-process": "^4.2.1",
     "bare-url": "^2.1.5",
     "bare-v8-to-istanbul": "github:holepunchto/bare-v8-to-istanbul",
     "picomatch": "^4.0.2",
