--- a/.github/workflows/test-bare.yml
+++ b/.github/workflows/test-bare.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test with Bare
 
 on:
   push:
@@ -31,8 +31,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
 
+      - name: Setup bare
+        run: npm i -g bare-runtime
+
       - name: Install dependencies
         run: npm i
 
+      - name: Install fixture dependencies
+        shell: bash
+        run: for dir in test/fixtures/*/; do (cd "$dir" && npm install); done
+
+      - name: Lint
+        run: npm run lint
+
       - name: Run tests
-        run: npm test
+        run: npm run test:bare
