--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Generate coverage reports using Bare and Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "node test/basic.js",
+    "test:bare": "bare test/basic.js",
+    "lint": "standard"
   },
   "repository": {
     "type": "git",
@@ -23,15 +25,19 @@
   },
   "homepage": "https://github.com/holepunchto/bare-cov#readme",
   "dependencies": {
-    "@istanbuljs/schema": "^0.1.3",
-    "istanbul-lib-coverage": "^3.2.2",
-    "istanbul-lib-report": "^3.0.1",
-    "istanbul-reports": "^3.1.7",
+    "bare-fs": "^4.1.2",
+    "bare-inspector": "^4.0.1",
+    "bare-path": "^3.0.0",
+    "bare-process": "^4.2.1",
+    "bare-url": "^2.1.5",
+    "bare-v8-to-istanbul": "v1.0.0",
     "picomatch": "^4.0.2",
-    "v8-to-istanbul": "^9.3.0"
+    "which-runtime": "^1.2.1"
   },
   "devDependencies": {
-    "standard": "^17.1.0"
+    "bare-subprocess": "^5.0.3",
+    "brittle": "^3.13.1",
+    "standard": "^17.1.2"
   },
   "files": [
     "index.js",
