--- a/package.json
+++ b/package.json
@@ -24,6 +24,26 @@
     "url": "https://github.com/holepunchto/bare-cov/issues"
   },
   "homepage": "https://github.com/holepunchto/bare-cov#readme",
+  "imports": {
+    "fs": {
+      "bare": "bare-fs"
+    },
+    "path": {
+      "bare": "bare-path"
+    },
+    "process": {
+      "bare": "bare-process"
+    },
+    "url": {
+      "bare": "bare-url"
+    },
+    "inspector": {
+      "bare": "bare-inspector"
+    },
+    "child_process": {
+      "bare": "bare-subprocess"
+    }
+  },
   "dependencies": {
     "bare-fs": "^4.1.2",
     "bare-inspector": "^4.0.1",
