--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Generate coverage reports using Bare and Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "node test/basic.js",
-    "test:bare": "bare test/basic.js",
+    "test": "node test",
+    "test:bare": "bare test",
     "lint": "standard"
   },
   "repository": {
@@ -24,6 +24,26 @@
     "url": "https://github.com/holepunchto/bare-cov/issues"
   },
   "homepage": "https://github.com/holepunchto/bare-cov#readme",
+  "imports": {
+    "fs": {
+      "bare": "bare-fs"
+    },
+    "path": {
+      "bare": "bare-path"
+    },
+    "process": {
+      "bare": "bare-process"
+    },
+    "url": {
+      "bare": "bare-url"
+    },
+    "inspector": {
+      "bare": "bare-inspector"
+    },
+    "child_process": {
+      "bare": "bare-subprocess"
+    }
+  },
   "dependencies": {
     "bare-fs": "^4.1.2",
     "bare-inspector": "^4.0.1",
