--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.1",
   "description": "Generate coverage reports using Bare and Node.js",
   "main": "index.js",
+  "bin": {
+    "bcov": "cmd.js"
+  },
   "scripts": {
     "test": "node test",
     "test:bare": "bare test",
