--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Generate coverage reports using Bare and Node.js",
   "main": "index.js",
   "bin": {
-    "bcov": "cmd.js"
+    "bcov": "bin/node.js",
+    "bcov-node": "bin/node.js",
+    "bcov-bare": "bin/bare.js"
   },
   "scripts": {
     "test": "node test",
@@ -66,6 +68,7 @@
   "files": [
     "index.js",
     "cmd.js",
-    "lib"
+    "lib",
+    "bin"
   ]
 }
