--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     },
     "child_process": {
       "bare": "bare-subprocess"
+    },
+    "os": {
+      "bare": "bare-os"
     }
   },
   "dependencies": {
@@ -61,6 +64,7 @@
     "which-runtime": "^1.2.1"
   },
   "devDependencies": {
+    "bare-os": "^3.6.1",
     "bare-subprocess": "^5.0.3",
     "brittle": "^3.13.1",
     "standard": "^17.1.2"
