--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node test",
     "test:bare": "bare test",
-    "lint": "standard"
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "repository": {
     "type": "git",
@@ -57,7 +58,8 @@
   "devDependencies": {
     "bare-subprocess": "^5.0.3",
     "brittle": "^3.13.1",
-    "standard": "^17.1.2"
+    "prettier": "^3.6.2",
+    "prettier-config-holepunch": "^2.0.0"
   },
   "files": [
     "index.js",
