Fix semver string for bare-v8-to-istanbul and switch to prettier (#9)
* Fix semver string for bare-v8-to-istanbul

* Add missing dependencies to fixture

* Add prettierrc and gitattributes files

* Apply prettier formatting

* Update workflows to use prettier

--- a/.github/workflows/test-bare.yml
+++ b/.github/workflows/test-bare.yml
@@ -2,9 +2,9 @@ name: Test with Bare
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
@@ -38,8 +38,8 @@ jobs:
         shell: bash
         run: for dir in test/fixtures/*/; do (cd "$dir" && npm install); done
 
-      - name: Lint
-        run: npm run lint
+      - name: Check format
+        run: npm run format:check
 
       - name: Run tests
         run: npm run test:bare
