--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node test",
     "test:bare": "bare test",
-    "lint": "standard"
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "repository": {
     "type": "git",
@@ -50,14 +51,15 @@
     "bare-path": "^3.0.0",
     "bare-process": "^4.2.1",
     "bare-url": "^2.1.5",
-    "bare-v8-to-istanbul": "v1.0.1",
+    "bare-v8-to-istanbul": "^1.0.2",
     "picomatch": "^4.0.2",
     "which-runtime": "^1.2.1"
   },
   "devDependencies": {
     "bare-subprocess": "^5.0.3",
     "brittle": "^3.13.1",
-    "standard": "^17.1.2"
+    "prettier": "^3.6.2",
+    "prettier-config-holepunch": "^2.0.0"
   },
   "files": [
     "index.js",
